fix(app): add line breaks to representations for improved readability

--- a/apps/manage/src/app/sass/style.scss
+++ b/apps/manage/src/app/sass/style.scss
@@ -22,6 +22,9 @@ $font-family: arial, helvetica, sans-serif;
 .pins-white-space-pre-wrap {
 	white-space: pre-wrap;
 }
+.pins-white-space-pre-line {
+	white-space: pre-line;
+}
 
 .status-tag-width {
 	max-width: 250px !important;
