--- a/apps/portal/src/app/sass/style.scss
+++ b/apps/portal/src/app/sass/style.scss
@@ -22,3 +22,9 @@
 .pins-pre-wrap {
 	white-space: pre-wrap;
 }
+.pins-pre-line {
+	white-space: pre-line;
+}
+.pins-overflow-break-word {
+	overflow-wrap: break-word;
+}
